--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+    <script src="app/main/main.controller.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
