--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,9 @@
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+    <script src="app/services/tables.services.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/tables/tables.controller.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
