--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="app/services/tables.services.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/tables/tables.controller.js"></script>
+    <script src="app/outings/outings.controller.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
