adds myTable html and controller; updates gitignore to include ds.store and remove lib files

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="app/outings/outings.controller.js"></script>
     <script src="app/create/create.controller.js"></script>
     <script src="app/tables/tables.controller.js"></script>
+    <script src="app/myTable/myTable.controller.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
