modified folder structure

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <script src="app/main/main.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/outings/outings.controller.js"></script>
-    <script src="app/tables/create.controller.js"></script>
+    <script src="app/create/create.controller.js"></script>
     <script src="app/tables/tables.controller.js"></script>
   </head>
   <body ng-app="app">
