--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <!-- your app's js -->
     <script src="app/app.js"></script>
     <script src="app/services/tables.services.js"></script>
+    <script src="app/services/users.service.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/outings/outings.controller.js"></script>
