--- a/www/app/create/create.html
+++ b/www/app/create/create.html
@@ -1,16 +1,17 @@
 <ion-view>
   <ion-content class="padding text-center">
   <!-- Text after angular text is placeholder -->
-    <h2>{{vm.name}} The Irish Bank Bar & Restaurant</h2>
-    <p>{{vm.types}} Irish, Irish Pub</p>
-    <p>{{vm.address}} 10 Mark Ln</p>
+    <h2>{{vm.name}}</h2>
+    <div ng-repeat="line in vm.address">
+      {{line}}
+    </div>
     <div class="list list-inset">
-    <form>
-      <input type="date" name="date">
-      <input type="time" name="time">
-      <input type="number" name="max" placeholder="Max People">
-      <input type="number" name="min" placeholder="Min People">
-      <input type="button" class="button button-block button-assertive" value="Create Table">
+    <form ng-submit="vm.submit()">
+      <input type="date" name="date" ng-model="vm.date">
+      <input type="time" name="time" ng-model="vm.time">
+      <input type="number" name="max" placeholder="Max People" ng-model="vm.max">
+      <input type="number" name="min" placeholder="Min People" ng-model="vm.min">
+      <input type="submit" class="button button-block button-assertive" value="Create Table">
     </form>
     </div>
   </ion-content>
