--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -14,10 +14,7 @@
       </div>
     </div>  
     <div>
-      <div> 
-        Create your own table
-        <a ui-sref="create"></a>
-      </div>
+        <a ui-sref="create">Create your own table</a>
     </div>
   </ion-content>
 </ion-view>
