refactor variables and resolve function

--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -2,11 +2,11 @@
   <ion-content class="padding text-center">
     <div>
       <div>
-        <h3>{{vm.restResults.name}}</h3>
-        <p>{{vm.restResults.location.address}},
-          {{vm.restResults.location.city}},
-          {{vm.restResults.location.state_code}},
-          {{vm.restResults.location.postal_code}}
+        <h3>{{vm.name}}</h3>
+        <p>{{vm.location.address}},
+          {{vm.location.city}},
+          {{vm.location.state_code}},
+          {{vm.location.postal_code}}
         </p>
       </div>
     </div>
