--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -6,8 +6,8 @@
     </p>
     <div class="list list-inset">
       <div class="item" ng-repeat="table in vm.tables">
-        <div>{{table.dateTime}} 
-             ({{table.users.length}})
+        <div>{{table.dateTime | date:"medium"}}
+             ({{table.users.length}} going)
              <a ui-sref="myTable"></a>
         </div>
       <div>
