sets up sockets on client side

--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -24,5 +24,8 @@
         <li>{{user.username}}<span ng-show='$index == 0'> (creator)</span></li>
       </ul>
     </div>
+    <div>
+      <button ng-click="vm.testButton()">Testing</button>
+    </div>
   </ion-content>
 </ion-view>
