--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/socket.io-client/socket.io.js"></script>
+    <script src="lib/angular-socket-io/socket.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -19,6 +21,7 @@
     <script src="app/services/tables.service.js"></script>
     <script src="app/services/users.service.js"></script>
     <script src="app/services/yelp.service.js"></script>
+    <script src="app/services/socket.service.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/outings/outings.controller.js"></script>
