--- a/www/app/create/create.html
+++ b/www/app/create/create.html
@@ -1,4 +1,8 @@
-<ion-view>
+<ion-view view-title="Create Table">
+  <ion-nav-bar>
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content class="padding text-center">
   <!-- Text after angular text is placeholder -->
     <h2>{{vm.name}}</h2>
