--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -1,4 +1,8 @@
-<ion-view>
+<ion-view view-title="My Table">
+  <ion-nav-bar>
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content class="padding text-center">
     <div>
       <div>
