--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -1,4 +1,8 @@
-<ion-view>
+<ion-view view-title="Tables">
+  <ion-nav-bar>
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content class="padding">
     <h2>{{vm.title}}</h2>
     <p ng-repeat="line in vm.address">
