--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -10,15 +10,15 @@
     </p>
     <div class="list list-inset">
       <div class="item" ng-repeat="table in vm.tables">
-        <div>{{table.dateTime | date:"medium"}}
-             ({{table.users.length}} going)
-             <a ui-sref="myTable"></a>
+        <div>{{table.dateTime}}
+             ({{table.users.length}})
+             <a ui-sref="tabs.myTable"></a>
         </div>
       <div>
       </div>
-    </div>  
+    </div>
     <div>
-        <a ui-sref="create">Create your own table</a>
+        <a ui-sref="tabs.create">Create your own table</a>
     </div>
   </ion-content>
 </ion-view>
