--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -6,13 +6,11 @@
     </p>
     <div class="list list-inset">
       <div class="item" ng-repeat="table in vm.tables">
-        <div>{{table.dateTime}}
-             ({{table.users.length}})
+        <div>{{table.dateTime | date:"medium"}}
+             ({{table.users.length}} going)
              <a ui-sref="tabs.myTable"></a>
         </div>
-      <div>
       </div>
-    </div>
     <div>
         <a ui-sref="tabs.create">Create your own table</a>
     </div>
