updates tabs.html to use state provider instead of uirouter;
updates address on all pages to display appropriately

--- a/www/app/outings/outings.html
+++ b/www/app/outings/outings.html
@@ -8,12 +8,17 @@
         </div>
         <div>
           <button ui-sref="myTable({eventId: outing._id})"
-                  class="col button button-block button-assertive">
+            class="col button button-block button-assertive">
             Chat
           </button>
           <div class="col col-75">
-            <div>{{outing.restaurantAddress}}</div>
-            <div>{{outing.dateTime}}</div>
+            <div>
+              {{outing.restaurantAddress.address[0]}},
+              {{outing.restaurantAddress.city}},
+              {{outing.restaurantAddress.state_code}},
+              {{outing.restaurantAddress.postal_code}}
+            </div>
+            <div>{{outing.dateTime | date:"medium"}}</div>
             <div>{{outing.users.length}} {{outing.users.length === 1 ? 'person' : 'people'}} going</div>
           </div>
         </div>
