--- a/www/app/common/tabs.html
+++ b/www/app/common/tabs.html
@@ -4,7 +4,7 @@
     <ion-nav-view name="signout-tab"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Search" icon="ion-search" href="#/tab/search">
+  <ion-tab title="Search" icon="ion-search" ui-sref="tabs.search">
     <ion-nav-view name="search-tab"></ion-nav-view>
   </ion-tab>
 
