--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -10,11 +10,11 @@
       <div class="item" ng-repeat="table in vm.tables">
         <div>{{table.dateTime | date:"medium"}}
              ({{table.users.length}} going)
-             <a ui-sref="tabs.myTable"></a>
+             <button class="button button-small button-assertive" ng-click="vm.updateInfo(vm.userId, table._id)">Join</button>
         </div>
       </div>
     <div>
-        <a ui-sref="tabs.create">Create your own table</a>
+        <a class="button button-small button-assertive" ui-sref="tabs.create">Create your own table</a>
     </div>
   </ion-content>
 </ion-view>
