--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/socket.io-client/socket.io.js"></script>
     <script src="lib/angular-socket-io/socket.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
