refactor for FB

--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -5,31 +5,8 @@
       Experience a restaurant's full menu in one visit.
     </p>
     <hr/>
-    <form name="form" novalidate ng-submit="vm.signin(vm.username)">
-
-      <div class="list list-inset">
-
-        <label class="item item-input"
-          ng-class="{ 'has-errors' : form.$submitted && form.$invalid, 'no-errors' : form.$submitted && form.$valid}">
-            <input type="text"
-              name="username"
-              ng-model="vm.username"
-              ng-minlength="5"
-              ng-maxlength="20"
-              placeholder="Username"
-              required>
-        </label>
-
-        <div class="error-container" ng-show="form.$submitted && form.$error" ng-messages="form.$error">
-          <ng-messages-include src="config/error-list.html"></ng-messages-include>
-        </div>
-
-      </div>
-
-      <input type="submit"
-        class="button button-block button-assertive"
-        value="Sign In">
-
-    </form>
+    <button class="button button-block button-positive" ng-click="vm.fbLogin()">
+    Login with Facebook
+    </button>
   </ion-content>
 </ion-view>
