--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,8 @@
     <script src="lib/socket.io-client/socket.io.js"></script>
     <script src="lib/angular-socket-io/socket.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
+    <script src="lib/openfb/openfb.js"></script>
+    <script src="lib/openfb/ngopenfb.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
