--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -30,7 +30,7 @@
     </div>
       <h1> Chatroom </h1>
       <div ng-repeat="message in vm.chat">
-        {{message.username}}: {{message.message}}
+        {{message.firstName}}: {{message.message}}
       </div>
     </div>
   </ion-content>
