adding phone number to items in outings page

--- a/www/app/outings/outings.html
+++ b/www/app/outings/outings.html
@@ -17,6 +17,7 @@
               {{outing.restaurantAddress.city}},
               {{outing.restaurantAddress.state_code}},
               {{outing.restaurantAddress.postal_code}}
+              {{outing.restaurantAddress}}
             </div>
             <div>{{outing.dateTime | date:"medium"}}</div>
             <div>{{outing.users.length}} {{outing.users.length === 1 ? 'person' : 'people'}} going</div>
