--- a/www/app/common/tabs.html
+++ b/www/app/common/tabs.html
@@ -4,7 +4,11 @@
     <ion-nav-view name="search-tab"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Outings" icon="ion-ios-world" ui-sref="tabs.outings">
+  <ion-tab title="Nearby" icon="ion-android-locate" ui-sref="tabs.nearby">
+    <ion-nav-view name="nearby-tab"></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab title="Outings" icon="ion-coffee" ui-sref="tabs.outings">
     <ion-nav-view name="outings-tab"></ion-nav-view>
   </ion-tab>
 
@@ -13,6 +17,7 @@
   </ion-tab>
 
   <ion-tab title="Sign Out" icon="ion-log-out" ui-sref="tabs.signout" ng-click="vm.signout()">
+    <ion-nav-view name="signout-tab"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
