--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,14 @@
     <script src="app/services/users.service.js"></script>
     <script src="app/services/yelp.service.js"></script>
     <script src="app/services/socket.service.js"></script>
+    <script src="app/services/leaderBoard.service.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/outings/outings.controller.js"></script>
     <script src="app/create/create.controller.js"></script>
     <script src="app/tables/tables.controller.js"></script>
     <script src="app/myTable/myTable.controller.js"></script>
+    <script src="app/leaderBoard/leaderBoard.controller.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-bar class="bar-positive">
