--- a/www/app/common/tabs.html
+++ b/www/app/common/tabs.html
@@ -12,4 +12,8 @@
     <ion-nav-view name="outings-tab"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Leader Board" icon="ion-ios-world" ui-sref="tabs.leaderboard">
+    <ion-nav-view name="leaderboard-tab"></ion-nav-view>
+  </ion-tab>
+
 </ion-tabs>
