--- a/www/app/leaderBoard/leaderBoard.html
+++ b/www/app/leaderBoard/leaderBoard.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content class="padding">
-    <h2>Leader Board</h2>
+    <h2>Popular</h2>
     <ion-list>
       <ion-item ng-repeat="restaurant in vm.restaurants">
         <div>
