--- a/www/app/common/tabs.html
+++ b/www/app/common/tabs.html
@@ -1,9 +1,5 @@
 <ion-tabs class="tabs-icon-top tabs-positive">
 
-  <ion-tab title="Sign Out" icon="ion-log-out" ui-sref="tabs.signout">
-    <ion-nav-view name="signout-tab"></ion-nav-view>
-  </ion-tab>
-
   <ion-tab title="Search" icon="ion-search" ui-sref="tabs.search">
     <ion-nav-view name="search-tab"></ion-nav-view>
   </ion-tab>
@@ -14,6 +10,9 @@
 
   <ion-tab title="Popular" icon="ion-ios-world" ui-sref="tabs.leaderboard">
     <ion-nav-view name="leaderboard-tab"></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab title="Sign Out" icon="ion-log-out" ui-sref="tabs.signout" ng-click="vm.signout()">
   </ion-tab>
 
 </ion-tabs>
