--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="app/services/socket.service.js"></script>
     <script src="app/services/leaderBoard.service.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/common/tabs.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/outings/outings.controller.js"></script>
     <script src="app/create/create.controller.js"></script>
