remove typo on myTable address

--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -8,7 +8,7 @@
           vm.location.city + ', ' +
           vm.location.state_code + ', ' +
           vm.location.postal_code)">
-          {{vm.location.address[0]}},>{{vm.location.address[0]}},
+          {{vm.location.address[0]}},
           {{vm.location.city}},
           {{vm.location.state_code}},
           {{vm.location.postal_code}}
