removing number of people on myTable page

--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -18,7 +18,7 @@
     <hr/>
     <div class="list list-inset">
       <p>
-        There are {{vm.users.length}} people are going to this event on {{vm.dateTime | date:"medium"}}.
+         {{vm.dateTime | date:"medium"}}.
       </p>
     </div>
     <div>
