refactored the outings.html remove funciton so that it is cleaner, the removeUserFromEvent function in tableService is primarily affected.

--- a/www/app/outings/outings.html
+++ b/www/app/outings/outings.html
@@ -11,7 +11,7 @@
             class="col button button-block button-assertive">
             Chat
           </button>
-          <button ng-click="vm.removeUserFromEvent(vm.userId, outing._id); vm.removeElement(vm.outings, $index)"
+          <button ng-click="vm.removeUserFromEvent(vm.userId, outing._id, vm.outings, $index)"
             class="col button button-block button-assertive">
             Remove
           </button>          
