fixed the removeUserFromEvent tableService function, namely refactored so that it is cleaner, had to keep success having paramaters.

--- a/www/app/outings/outings.html
+++ b/www/app/outings/outings.html
@@ -2,7 +2,7 @@
   <ion-content class="padding">
     <h2>My Outings</h2>
     <ion-list>
-      <ion-item ng-repeat="outing in vm.outings">
+      <ion-item ng-repeat="outing in vm.outings track by $index">
         <div>
           <h1>{{outing.restaurantName}}</h1>
         </div>
