adds loading icon; takes user to join page

--- a/www/app/nearby/nearby.html
+++ b/www/app/nearby/nearby.html
@@ -9,7 +9,7 @@
         </div>
 
         <div text-right>
-          <button class="button button-small button-assertive text-right" ng-click="vm.updateInfo(vm.userId, rest._id)">
+          <button class="button button-small button-assertive text-right" ng-click="vm.tablePage(rest)">
             Join Table
           </button>
         </div>
