--- a/www/app/common/tabs.html
+++ b/www/app/common/tabs.html
@@ -1,3 +1,7 @@
+<ion-nav-bar class="bar-positive">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+</ion-nav-bar>
 <ion-tabs class="tabs-icon-top tabs-positive">
 
   <ion-tab title="Search" icon="ion-search" ui-sref="tabs.search">
