--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -5,7 +5,7 @@
       Experience a restaurant's full menu in one visit.
     </p>
     <hr/>
-    <button class="button button-block button-positive" ng-click="vm.fbLogin()">
+    <button class="button button-block button-positive fb-login" ng-click="vm.fbLogin()">
     Login with Facebook
     </button>
   </ion-content>
