--- a/www/app/outings/outings.html
+++ b/www/app/outings/outings.html
@@ -1,6 +1,5 @@
-<ion-view>
+<ion-view title="Outings">
   <ion-content class="padding">
-    <h2>My Outings</h2>
     <ion-list>
       <ion-item ng-repeat="outing in vm.outings track by $index">
         <div>
