--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
     <!-- IF using Sass (run gulp sass first) -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.create.css" rel="stylesheet">
+
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
