removing emptying fields on successful search

--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -37,8 +37,8 @@
         </div>
       </div>
     </div>
-    <div class="">
-      <a class="button button-block button-assertive join-button" ui-sref="tabs.create">Create your own table</a>
+    <div>
+      <a class="button button-block button-assertive" ui-sref="tabs.create">Create your own table</a>
     </div>
   </ion-content>
 </ion-view>
