--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     <link href="css/outings.css" rel="stylesheet">
     <link href="css/popular.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-
+    <link href="css/chat.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
